# lazy-attribute

./: .release-please-manifest.json  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  codecov.yml  release-please-config.json
.github/workflows/: coverage.yml  release.yml
examples/lazy-async-func/: Cargo.toml
examples/lazy-async-func/src/: main.rs
examples/lazy-func/: Cargo.toml
examples/lazy-func/src/: main.rs
examples/lazy-map/: Cargo.toml
lazy-attr/: Cargo.toml
lazy-attr-core/: Cargo.toml
lazy-attr-core/src/: lazy.rs  lib.rs
lazy-attr/src/: lib.rs
lazy-attr/test/: 01-correct-func.rs  02-correct-async-func.rs  03-unsupported-args.rs
lazy-attribute/: CHANGELOG.md  Cargo.toml  README.md
lazy-attribute-core/: CHANGELOG.md  Cargo.toml
lazy-attribute-core/src/: lazy.rs  lib.md  lib.rs
lazy-attribute/src/: lazy_map.md  lazy_ref.md  lib.md  lib.rs
lazy-attribute/test/: 01-correct-func.rs  02-correct-async-func.rs  03-correct-map.rs  03-unsupported-args.rs  03-unsupported-args.stderr  04-unsupported-args.rs  04-unsupported-args.stderr  05-unsupported-map-attr.rs  05-unsupported-map-attr.stderr
