[package]
name = "lazy-attr-core"
version = "0.1.0"
description = "Core implementation of the lazy-attr macro"
keywords = []
categories = []
include = ["/src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "Apache-2.0 or MIT"
readme = "../README.md"
edition = "2021"
rust-version = "1.67"
documentation = "https://docs.rs/lazy-attr"
repository = "https://github.com/appcypher/lazy-attr"
authors = ["Stephen Akinyemi <appcypher@outlook.com>"]

[lib]
doctest = true
proc-macro = true

[dependencies]
anyhow = "1.0"
async-once-cell = { version = "0.5", optional = true }
once_cell = "1.18"
proc-macro-crate = "2.0.0"
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = "2.0.38"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = []
async = ["dep:async-once-cell"]
