[package]
name = "lazy-attr"
version = "0.1.0"
description = "Convenient macro for lazy function call"
keywords = []
categories = []
include = ["/src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "Apache-2.0 or MIT"
readme = "../README.md"
edition = "2021"
rust-version = "1.67"
documentation = "https://docs.rs/lazy-attr"
repository = "https://github.com/appcypher/lazy-attr"
authors = ["Stephen Akinyemi <appcypher@outlook.com>"]

[dependencies]
async-once-cell = "0.5.3"
lazy-attr-core = { workspace = true }
once_cell = "1.18.0"

[features]
default = []
async = ["lazy-attr-core/async"]
