[package]
name = "lazy-attribute-core"
version = "0.1.4"
description = "Implementation of the lazy macro"
keywords = []
categories = []
include = [
    "/src",
    "../lazy-attribute/README.md",
    "../LICENSE-APACHE",
    "../LICENSE-MIT",
]
license = "MIT OR Apache-2.0"
readme = "../lazy-attribute/README.md"
edition = "2021"
documentation = "https://docs.rs/lazy-attribute"
repository = "https://github.com/zerocore-ai/lazy-attribute"
authors = ["Stephen Akinyemi <appcypher@outlook.com>"]

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3.1.0"
proc-macro2 = "1.0.85"
quote = "1.0.36"
syn = { version = "2.0.58", features = ["full"] }

[features]
default = []
async = []

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt", "rt-multi-thread"] }
