[package]
name = "lazy-attribute"
version = "0.1.0"
description = "This crate provides a convenient attribute macro for lazy function execution"
keywords = []
categories = []
include = ["/src", "README.md", "../LICENSE-APACHE", "../LICENSE-MIT"]
license = "Apache-2.0 or MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.67"
documentation = "https://docs.rs/lazy-attribute"
repository = "https://github.com/zerocore-ai/lazy-attribute"
authors = ["Stephen Akinyemi <appcypher@outlook.com>"]

[dependencies]
async-once-cell = "0.5"
lazy-attribute-core = { workspace = true }
once_cell = "1.18"

[dev-dependencies]
tokio = { version = "1.33.0", features = ["macros", "rt", "rt-multi-thread"] }
trybuild = "1.0.85"

[features]
default = []
async = ["lazy-attribute-core/async"]
