[package]
name = "lazy-attribute"
version = "0.1.4"
description = "This crate provides a convenient attribute macro for lazy function execution"
keywords = []
categories = []
include = ["/src", "README.md", "../LICENSE-APACHE", "../LICENSE-MIT"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
documentation = "https://docs.rs/lazy-attribute"
repository = "https://github.com/zerocore-ai/lazy-attribute"
authors = ["Stephen Akinyemi <appcypher@outlook.com>"]

[lib]
doctest = true

[dependencies]
async-once-cell = { version = "0.5", optional = true }
lazy-attribute-core = { version = "0.1.4", path = "../lazy-attribute-core" }
once_cell = "1.19"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt", "rt-multi-thread"] }
trybuild = "1.0.96"

[features]
default = []
async = ["lazy-attribute-core/async", "async-once-cell"]
